--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,14 @@
 .valid-error{
     color:red;
 }
+
+.center_cell {    
+    text-align:center; 
+    vertical-align:middle;
+}
+
+.price_detail{
+    font-style: italic;
+    font-size: 12px;
+    color:grey;
+}
