--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,3 +38,18 @@
 .marge{
     padding:6px 30px 30px 30px;
 }
+
+.text-90{
+    font-size: 90%;
+}
+.text-80{
+    font-size: 80%;
+}
+
+strong{
+    font-weight: bold;
+}
+
+em{
+    font-style: italic;
+}
