--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -55,6 +55,7 @@ $foundation-palette: (
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
+  gosciences-green: #B2C835,
 );
 $light-green: #eaf0c7;	// perso
 $light-gray: #B2C835; //#e6e6e6;
