--- a/assets/css/week-calendar/jquery.weekcalendar.css
+++ b/assets/css/week-calendar/jquery.weekcalendar.css
@@ -207,7 +207,7 @@ table.wc-time-slots {
 }
 
 .wc-cal-event {
-    background-color: #68a1e5;
+    background-color: #B2C835;
   /* Modern Browsers */ opacity: 0.8;
   /* IE 8 */ -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
   /* IE 5-7 */ filter: alpha(opacity=80);
@@ -235,8 +235,8 @@ table.wc-time-slots {
 }
 
 .wc-cal-event .wc-time {
-    background-color: #2b72d0;
-    border: 1px solid #1b62c0;
+    background-color: #96AC19;
+    border: 1px solid #96AC19;
     color: #fff;
     padding: 0;
     font-weight: bold;
